vendor/teide/include/teide/td.h


#define TD_TYPE_COUNT 22
typedef enum {
    TD_OK = 0,
    TD_ERR_OOM,
    TD_ERR_TYPE,
    TD_ERR_RANGE,
    TD_ERR_LENGTH,
    TD_ERR_RANK,
    TD_ERR_DOMAIN,
    TD_ERR_NYI,
    TD_ERR_IO,
    TD_ERR_SCHEMA,
    TD_ERR_CORRUPT,
    TD_ERR_CANCEL
} td_err_t;
const char* td_err_str(td_err_t e);
typedef union TD_ALIGN(32) td_t {
    struct {
        union {
            uint8_t  nullmap[16];
            struct { union td_t* slice_parent; int64_t slice_offset; };
            struct { union td_t* ext_nullmap;  union td_t* sym_dict; };
            struct { union td_t* str_ext_null; union td_t* str_pool; };
        };
        uint8_t  mmod;       
        uint8_t  order;      
        int8_t   type;       
        uint8_t  attrs;      
        _Atomic(uint32_t) rc; 
        union {
            uint8_t  b8;     
            uint8_t  u8;     
            char     c8;     
            int16_t  i16;    
            int32_t  i32;    
            uint32_t u32;
            int64_t  i64;    
            double   f64;    
            union td_t* obj; 
            struct { uint8_t slen; char sdata[7]; }; 
            int64_t  len;    
        };
        uint8_t  data[];     
    };
    struct {
        union td_t* fl_prev;
        union td_t* fl_next;
    };
} td_t;
extern const uint8_t td_type_sizes[TD_TYPE_COUNT];
#define td_data(v)       td_data_fn(v)
#define td_elem_size(t)  (td_type_sizes[(t)])
typedef struct td_op {
    uint16_t       opcode;     
    uint8_t        arity;      
    uint8_t        flags;      
    int8_t         out_type;   
    uint8_t        pad[3];
    uint32_t       id;         
    uint32_t       est_rows;   
    struct td_op*  inputs[2];  
} td_op_t;
typedef struct td_op_ext {
    td_op_t base;              
    union {
        td_t*   literal;       
        int64_t sym;           
        struct {               
            td_op_t**  keys;
            uint8_t    n_keys;
            uint8_t    n_aggs;
            uint16_t*  agg_ops;
            td_op_t**  agg_ins;
        };
        struct {               
            td_op_t**  columns;
            uint8_t*   desc;
            uint8_t*   nulls_first; 
            uint8_t    n_cols;
        } sort;
        struct {               
            td_op_t**  left_keys;
            td_op_t**  right_keys;
            uint8_t    n_join_keys;
            uint8_t    join_type;  
        } join;
        struct {               
            td_op_t*   time_key;      
            td_op_t**  eq_keys;       
            uint8_t    n_eq_keys;     
            uint8_t    join_type;     
        } asof;
        struct {               
            td_op_t**  part_keys;
            td_op_t**  order_keys;
            uint8_t*   order_descs;
            td_op_t**  func_inputs;
            uint8_t*   func_kinds;    
            int64_t*   func_params;   
            uint8_t    n_part_keys;
            uint8_t    n_order_keys;
            uint8_t    n_funcs;
            uint8_t    frame_type;    
            uint8_t    frame_start;   
            uint8_t    frame_end;     
            int64_t    frame_start_n;
            int64_t    frame_end_n;
        } window;
        struct {  
            void*     rel;            
            void*     sip_sel;        
            uint8_t   direction;      
            uint8_t   min_depth;
            uint8_t   max_depth;
            uint8_t   path_tracking;
            uint8_t   factorized;     
            uint16_t  max_iter;       
            double    damping;        
            int64_t   weight_col_sym; 
            int64_t   coord_col_syms[2]; 
            void*     node_props;       
        } graph;
        struct {  
            void**    rels;           
            uint8_t   n_rels;
            uint8_t   n_vars;
        } wco;
        struct {  
            float*    query_vec;      
            int32_t   dim;            
            int64_t   k;              
        } vector;
        struct {  
            void*     hnsw_idx;       
            float*    query_vec;
            int32_t   dim;
            int64_t   k;
            int32_t   ef_search;
        } hnsw;
    };
} td_op_ext_t;
typedef struct td_graph {
    td_op_t*       nodes;       
    uint32_t       node_count;  
    uint32_t       node_cap;    
    td_t*          table;       
    td_t**         tables;      
    uint16_t       n_tables;    
    td_op_ext_t**  ext_nodes;   
    uint32_t       ext_count;   
    uint32_t       ext_cap;     
    td_t*          selection;   
} td_graph_t;
typedef struct {
    td_t*    vec;          
    int64_t  offset;       
    int64_t  len;          
    uint32_t elem_size;    
    int64_t  morsel_len;   
    void*    morsel_ptr;   
    uint8_t* null_bits;    
} td_morsel_t;
typedef struct td_pipe {
    td_op_t*          op;            
    struct td_pipe*   inputs[2];     
    td_morsel_t       state;         
    td_t*             materialized;  
    int               spill_fd;      
} td_pipe_t;
typedef struct {
    size_t alloc_count;      
    size_t free_count;       
    size_t bytes_allocated;  
    size_t peak_bytes;       
    size_t slab_hits;        
    size_t direct_count;     
    size_t direct_bytes;     
    size_t sys_current;      
    size_t sys_peak;         
} td_mem_stats_t;
typedef struct td_heap      td_heap_t;
typedef struct td_sym_table td_sym_table_t;
typedef struct td_sym_map   td_sym_map_t;
typedef struct td_pool      td_pool_t;
typedef struct td_task      td_task_t;
typedef struct td_dispatch  td_dispatch_t;
  typedef void* td_thread_t;
  typedef unsigned long td_thread_t;
typedef void (*td_thread_fn)(void* arg);
void* td_vm_alloc(size_t size);
void  td_vm_free(void* ptr, size_t size);
void* td_vm_map_file(const char* path, size_t* out_size);
void  td_vm_unmap_file(void* ptr, size_t size);
void  td_vm_advise_seq(void* ptr, size_t size);
void  td_vm_release(void* ptr, size_t size);
td_err_t td_thread_create(td_thread_t* t, td_thread_fn fn, void* arg);
td_err_t td_thread_join(td_thread_t t);
uint32_t td_thread_count(void);
void td_parallel_begin(void);
void td_parallel_end(void);
void td_heap_gc(void);
td_t*    td_alloc(size_t data_size);
void     td_free(td_t* v);
td_t*    td_alloc_copy(td_t* v);
td_t*    td_scratch_alloc(size_t data_size);
td_t*    td_scratch_realloc(td_t* v, size_t new_data_size);
void     td_heap_init(void);
void     td_heap_destroy(void);
void     td_heap_merge(td_heap_t* src);
void     td_mem_stats(td_mem_stats_t* out);
void     td_retain(td_t* v);
void     td_release(td_t* v);
td_t*    td_cow(td_t* v);
td_t* td_bool(bool val);
td_t* td_u8(uint8_t val);
td_t* td_char(char val);
td_t* td_i16(int16_t val);
td_t* td_i32(int32_t val);
td_t* td_i64(int64_t val);
td_t* td_f64(double val);
td_t* td_str(const char* s, size_t len);
td_t* td_sym(int64_t id);
td_t* td_date(int64_t val);
td_t* td_time(int64_t val);
td_t* td_timestamp(int64_t val);
td_t* td_guid(const uint8_t* bytes);
td_t* td_vec_new(int8_t type, int64_t capacity);
td_t* td_sym_vec_new(uint8_t sym_width, int64_t capacity);  
td_t* td_vec_append(td_t* vec, const void* elem);
td_t* td_vec_set(td_t* vec, int64_t idx, const void* elem);
void* td_vec_get(td_t* vec, int64_t idx);
td_t* td_vec_slice(td_t* vec, int64_t offset, int64_t len);
td_t* td_vec_concat(td_t* a, td_t* b);
td_t* td_vec_from_raw(int8_t type, const void* data, int64_t count);
void  td_vec_set_null(td_t* vec, int64_t idx, bool is_null);
bool  td_vec_is_null(td_t* vec, int64_t idx);
const char* td_str_ptr(td_t* s);
size_t      td_str_len(td_t* s);
int         td_str_cmp(td_t* a, td_t* b);
td_t* td_list_new(int64_t capacity);
td_t* td_list_append(td_t* list, td_t* item);
td_t* td_list_get(td_t* list, int64_t idx);
td_t* td_list_set(td_t* list, int64_t idx, td_t* item);
void     td_sym_init(void);
void     td_sym_destroy(void);
int64_t  td_sym_intern(const char* str, size_t len);
int64_t  td_sym_find(const char* str, size_t len);
td_t*    td_sym_str(int64_t id);
uint32_t td_sym_count(void);
td_t*       td_table_new(int64_t ncols);
td_t*       td_table_add_col(td_t* tbl, int64_t name_id, td_t* col_vec);
td_t*       td_table_get_col(td_t* tbl, int64_t name_id);
td_t*       td_table_get_col_idx(td_t* tbl, int64_t idx);
int64_t     td_table_col_name(td_t* tbl, int64_t idx);
int64_t     td_table_ncols(td_t* tbl);
int64_t     td_table_nrows(td_t* tbl);
td_t*       td_table_schema(td_t* tbl);
void td_morsel_init(td_morsel_t* m, td_t* vec);
void td_morsel_init_range(td_morsel_t* m, td_t* vec, int64_t start, int64_t end);
bool td_morsel_next(td_morsel_t* m);
td_graph_t* td_graph_new(td_t* tbl);
void        td_graph_free(td_graph_t* g);
td_op_t* td_scan(td_graph_t* g, const char* col_name);
td_op_t* td_const_f64(td_graph_t* g, double val);
td_op_t* td_const_i64(td_graph_t* g, int64_t val);
td_op_t* td_const_bool(td_graph_t* g, bool val);
td_op_t* td_const_str(td_graph_t* g, const char* s);
td_op_t* td_const_vec(td_graph_t* g, td_t* vec);
td_op_t* td_const_table(td_graph_t* g, td_t* table);
td_op_t* td_neg(td_graph_t* g, td_op_t* a);
td_op_t* td_abs(td_graph_t* g, td_op_t* a);
td_op_t* td_not(td_graph_t* g, td_op_t* a);
td_op_t* td_sqrt_op(td_graph_t* g, td_op_t* a);
td_op_t* td_log_op(td_graph_t* g, td_op_t* a);
td_op_t* td_exp_op(td_graph_t* g, td_op_t* a);
td_op_t* td_ceil_op(td_graph_t* g, td_op_t* a);
td_op_t* td_floor_op(td_graph_t* g, td_op_t* a);
td_op_t* td_isnull(td_graph_t* g, td_op_t* a);
td_op_t* td_cast(td_graph_t* g, td_op_t* a, int8_t target_type);
td_op_t* td_add(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_sub(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_mul(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_div(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_mod(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_eq(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_ne(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_lt(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_le(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_gt(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_ge(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_and(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_or(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_min2(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_max2(td_graph_t* g, td_op_t* a, td_op_t* b);
td_op_t* td_if(td_graph_t* g, td_op_t* cond, td_op_t* then_val, td_op_t* else_val);
td_op_t* td_like(td_graph_t* g, td_op_t* input, td_op_t* pattern);
td_op_t* td_ilike(td_graph_t* g, td_op_t* input, td_op_t* pattern);
td_op_t* td_upper(td_graph_t* g, td_op_t* a);
td_op_t* td_lower(td_graph_t* g, td_op_t* a);
td_op_t* td_strlen(td_graph_t* g, td_op_t* a);
td_op_t* td_substr(td_graph_t* g, td_op_t* str, td_op_t* start, td_op_t* len);
td_op_t* td_replace(td_graph_t* g, td_op_t* str, td_op_t* from, td_op_t* to);
td_op_t* td_trim_op(td_graph_t* g, td_op_t* a);
td_op_t* td_concat(td_graph_t* g, td_op_t** args, int n);
td_op_t* td_extract(td_graph_t* g, td_op_t* col, int64_t field);
td_op_t* td_date_trunc(td_graph_t* g, td_op_t* col, int64_t field);