src/ffi.rs


/// Get pointer to data payload (byte 32 onward).
///
/// # Safety
/// `v` must be a valid non-null pointer to a live `td_t`.
#[inline]
pub unsafe fn td_data(v: *mut td_t) -> *mut c_void {
    (v as *mut u8).add(32) as *mut c_void
}

/// Element size for a given type tag.
///
/// Returns 0 if `t` is out of range (instead of panicking), which is safe
/// because callers already treat 0 as an error indicator.
///
/// # Safety
/// Caller must ensure the C runtime is initialized so `td_type_sizes` is valid.
#[inline]
pub unsafe fn td_elem_size(t: i8) -> u8 {
    if (t as usize) >= TD_TYPE_COUNT {
        return 0;
    }
    td_type_sizes[t as usize]
}

// ===== Operation Node =====

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct td_op_t {
    pub opcode: u16,
    pub arity: u8,
    pub flags: u8,
    pub out_type: i8,
    pub pad: [u8; 3],
    pub id: u32,
    pub est_rows: u32,
    pub inputs: [*mut td_op_t; 2],
}

// Extended op node — opaque (104 bytes, complex unions).
// Size validated by compile-time assertion at bottom of ffi.rs (line ~840).
#[repr(C)]
pub struct td_op_ext_t {
    _opaque: [u8; 104],
}

// ===== Operation Graph =====

#[repr(C)]
pub struct td_graph_t {
    pub nodes: *mut td_op_t,
    pub node_count: u32,
    pub node_cap: u32,
    pub table: *mut td_t,
    pub ext_nodes: *mut *mut td_op_ext_t,
    pub ext_count: u32,
    pub ext_cap: u32,
    pub selection: *mut td_t,
}

// ===== Morsel Iterator =====

#[repr(C)]
pub struct td_morsel_t {
    pub vec: *mut td_t,
    pub offset: i64,
    pub len: i64,
    pub elem_size: u32,
    pub morsel_len: i64,
    pub morsel_ptr: *mut c_void,
    pub null_bits: *mut u8,
}

// ===== Executor Pipeline =====

#[repr(C)]
pub struct td_pipe_t {
    pub op: *mut td_op_t,
    pub inputs: [*mut td_pipe_t; 2],
    pub state: td_morsel_t,
    pub materialized: *mut td_t,
    pub spill_fd: c_int,
}

// ===== Memory Statistics =====

#[repr(C)]
#[derive(Debug, Clone, Copy, Default)]
pub struct td_mem_stats_t {
    pub alloc_count: usize,
    pub free_count: usize,
    pub bytes_allocated: usize,
    pub peak_bytes: usize,
    pub slab_hits: usize,
    pub direct_count: usize,
    pub direct_bytes: usize,
    pub sys_current: usize,
    pub sys_peak: usize,
}

// ===== Opaque Forward Declarations =====

#[repr(C)]
pub struct td_heap_t {
    _opaque: [u8; 0],
}

#[repr(C)]
pub struct td_sym_table_t {
    _opaque: [u8; 0],
}

#[repr(C)]
pub struct td_sym_map_t {
    _opaque: [u8; 0],
}

#[repr(C)]
pub struct td_pool_t {
    _opaque: [u8; 0],
}

#[repr(C)]
pub struct td_task_t {
    _opaque: [u8; 0],
}

#[repr(C)]
pub struct td_dispatch_t {
    _opaque: [u8; 0],
}

// ===== Thread Types =====

#[cfg(target_os = "windows")]
pub type td_thread_t = *mut c_void;
#[cfg(not(target_os = "windows"))]
pub type td_thread_t = std::os::raw::c_ulong;

pub type td_thread_fn = Option<unsafe extern "C" fn(arg: *mut c_void)>;

// ===== Extern: type sizes table =====

extern "C" {
    pub static td_type_sizes: [u8; TD_TYPE_COUNT];
}

// ===== Extern "C" Function Declarations =====

extern "C" {
    // --- Error ---
    pub fn td_err_str(e: td_err_t) -> *const c_char;

    // --- Platform API ---
    pub fn td_vm_alloc(size: usize) -> *mut c_void;
    pub fn td_vm_free(ptr: *mut c_void, size: usize);
    pub fn td_vm_map_file(path: *const c_char, out_size: *mut usize) -> *mut c_void;
    pub fn td_vm_unmap_file(ptr: *mut c_void, size: usize);
    pub fn td_vm_advise_seq(ptr: *mut c_void, size: usize);
    pub fn td_vm_release(ptr: *mut c_void, size: usize);

    // --- Threading API ---
    pub fn td_thread_create(t: *mut td_thread_t, f: td_thread_fn, arg: *mut c_void) -> td_err_t;
    pub fn td_thread_join(t: td_thread_t) -> td_err_t;
    pub fn td_thread_count() -> u32;
    pub fn td_parallel_begin();
    pub fn td_parallel_end();
    pub fn td_heap_gc();

    // --- Memory Allocator API ---
    pub fn td_alloc(data_size: usize) -> *mut td_t;
    pub fn td_free(v: *mut td_t);
    pub fn td_alloc_copy(v: *mut td_t) -> *mut td_t;
    pub fn td_scratch_alloc(data_size: usize) -> *mut td_t;
    pub fn td_scratch_realloc(v: *mut td_t, new_data_size: usize) -> *mut td_t;
    pub fn td_heap_init();
    pub fn td_heap_destroy();
    pub fn td_heap_merge(src: *mut td_heap_t);
    pub fn td_mem_stats(out: *mut td_mem_stats_t);

    // --- COW / Ref Counting API ---
    pub fn td_retain(v: *mut td_t);
    pub fn td_release(v: *mut td_t);
    pub fn td_cow(v: *mut td_t) -> *mut td_t;

    // --- Atom Constructors ---
    pub fn td_bool(val: bool) -> *mut td_t;
    pub fn td_u8(val: u8) -> *mut td_t;
    pub fn td_char(val: c_char) -> *mut td_t;
    pub fn td_i16(val: i16) -> *mut td_t;
    pub fn td_i32(val: i32) -> *mut td_t;
    pub fn td_i64(val: i64) -> *mut td_t;
    pub fn td_f64(val: c_double) -> *mut td_t;
    pub fn td_str(s: *const c_char, len: usize) -> *mut td_t;
    pub fn td_sym(id: i64) -> *mut td_t;
    pub fn td_date(val: i64) -> *mut td_t;
    pub fn td_time(val: i64) -> *mut td_t;
    pub fn td_timestamp(val: i64) -> *mut td_t;
    pub fn td_guid(bytes: *const u8) -> *mut td_t;

    // --- Vector API ---
    pub fn td_vec_new(type_: i8, capacity: i64) -> *mut td_t;
    pub fn td_sym_vec_new(sym_width: u8, capacity: i64) -> *mut td_t;
    pub fn td_vec_append(vec: *mut td_t, elem: *const c_void) -> *mut td_t;
    pub fn td_vec_set(vec: *mut td_t, idx: i64, elem: *const c_void) -> *mut td_t;
    pub fn td_vec_get(vec: *mut td_t, idx: i64) -> *mut c_void;
    pub fn td_vec_slice(vec: *mut td_t, offset: i64, len: i64) -> *mut td_t;
    pub fn td_vec_concat(a: *mut td_t, b: *mut td_t) -> *mut td_t;
    pub fn td_vec_from_raw(type_: i8, data: *const c_void, count: i64) -> *mut td_t;
    pub fn td_vec_set_null(vec: *mut td_t, idx: i64, is_null: bool);
    pub fn td_vec_is_null(vec: *mut td_t, idx: i64) -> bool;

    // --- String API ---
    pub fn td_str_ptr(s: *mut td_t) -> *const c_char;
    pub fn td_str_len(s: *mut td_t) -> usize;
    pub fn td_str_cmp(a: *mut td_t, b: *mut td_t) -> c_int;

    // --- List API ---
    pub fn td_list_new(capacity: i64) -> *mut td_t;
    pub fn td_list_append(list: *mut td_t, item: *mut td_t) -> *mut td_t;
    pub fn td_list_get(list: *mut td_t, idx: i64) -> *mut td_t;
    pub fn td_list_set(list: *mut td_t, idx: i64, item: *mut td_t) -> *mut td_t;

    // --- Symbol Intern Table API ---
    pub fn td_sym_init();
    pub fn td_sym_destroy();
    pub fn td_sym_intern(s: *const c_char, len: usize) -> i64;
    pub fn td_sym_find(s: *const c_char, len: usize) -> i64;
    pub fn td_sym_str(id: i64) -> *mut td_t;
    pub fn td_sym_count() -> u32;

    // --- Table API ---
    pub fn td_table_new(ncols: i64) -> *mut td_t;
    pub fn td_table_add_col(tbl: *mut td_t, name_id: i64, col_vec: *mut td_t) -> *mut td_t;
    pub fn td_table_get_col(tbl: *mut td_t, name_id: i64) -> *mut td_t;
    pub fn td_table_get_col_idx(tbl: *mut td_t, idx: i64) -> *mut td_t;
    pub fn td_table_col_name(tbl: *mut td_t, idx: i64) -> i64;
    pub fn td_table_ncols(tbl: *mut td_t) -> i64;
    pub fn td_table_nrows(tbl: *mut td_t) -> i64;
    pub fn td_table_schema(tbl: *mut td_t) -> *mut td_t;

    // --- Morsel Iterator API ---
    pub fn td_morsel_init(m: *mut td_morsel_t, vec: *mut td_t);
    pub fn td_morsel_init_range(m: *mut td_morsel_t, vec: *mut td_t, start: i64, end: i64);
    pub fn td_morsel_next(m: *mut td_morsel_t) -> bool;

    // --- Operation Graph API ---
    pub fn td_graph_new(tbl: *mut td_t) -> *mut td_graph_t;
    pub fn td_graph_free(g: *mut td_graph_t);

    // Source ops
    pub fn td_scan(g: *mut td_graph_t, col_name: *const c_char) -> *mut td_op_t;
    pub fn td_const_f64(g: *mut td_graph_t, val: c_double) -> *mut td_op_t;
    pub fn td_const_i64(g: *mut td_graph_t, val: i64) -> *mut td_op_t;
    pub fn td_const_bool(g: *mut td_graph_t, val: bool) -> *mut td_op_t;
    pub fn td_const_str(g: *mut td_graph_t, s: *const c_char) -> *mut td_op_t;
    pub fn td_const_vec(g: *mut td_graph_t, vec: *mut td_t) -> *mut td_op_t;
    pub fn td_const_table(g: *mut td_graph_t, table: *mut td_t) -> *mut td_op_t;

    // Unary element-wise ops
    pub fn td_neg(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_abs(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_not(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_sqrt_op(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_log_op(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_exp_op(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_ceil_op(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_floor_op(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_isnull(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_cast(g: *mut td_graph_t, a: *mut td_op_t, target_type: i8) -> *mut td_op_t;

    // Binary element-wise ops
    pub fn td_add(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_sub(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_mul(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_div(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_mod(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_eq(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_ne(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_lt(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_le(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_gt(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_ge(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_and(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_or(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_min2(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_max2(g: *mut td_graph_t, a: *mut td_op_t, b: *mut td_op_t) -> *mut td_op_t;
    pub fn td_if(
        g: *mut td_graph_t,
        cond: *mut td_op_t,
        then_val: *mut td_op_t,
        else_val: *mut td_op_t,
    ) -> *mut td_op_t;
    pub fn td_like(g: *mut td_graph_t, input: *mut td_op_t, pattern: *mut td_op_t) -> *mut td_op_t;
    pub fn td_ilike(g: *mut td_graph_t, input: *mut td_op_t, pattern: *mut td_op_t)
        -> *mut td_op_t;
    pub fn td_upper(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_lower(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_strlen(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_substr(
        g: *mut td_graph_t,
        str: *mut td_op_t,
        start: *mut td_op_t,
        len: *mut td_op_t,
    ) -> *mut td_op_t;
    pub fn td_replace(
        g: *mut td_graph_t,
        str: *mut td_op_t,
        from: *mut td_op_t,
        to: *mut td_op_t,
    ) -> *mut td_op_t;
    pub fn td_trim_op(g: *mut td_graph_t, a: *mut td_op_t) -> *mut td_op_t;
    pub fn td_concat(g: *mut td_graph_t, args: *mut *mut td_op_t, n: c_int) -> *mut td_op_t;
    pub fn td_extract(g: *mut td_graph_t, col: *mut td_op_t, field: i64) -> *mut td_op_t;
    pub fn td_date_trunc(g: *mut td_graph_t, col: *mut td_op_t, field: i64) -> *mut td_op_t;
